# sdot2d

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  RunDocker.sh
.github/workflows/: build-test.yml  cmake.yml
doc/: sdot.doxyfile.in
examples/python/: .gitignore  BarQuantization.py  Beaufort.py  CentroidalOT.py  CentroidalVoronoi.py  Laguerre.py  NaresStrait_MultiscaleCentroidal.py  PlotObjective.py  RandomRectangle.py  UnbalancedCircles.py  WassersteinTranslation.py  WeightedCentroidalVoronoi.py
include/SDOT/: Assert.h  BoundingBox.h  DiscretizedDistribution.h  Distribution2d.h  LaguerreDiagram.h  OptionUtilities.h  Polygon.h  PolygonRasterize.h  RegularGrid.h  SemiDiscreteOT.h
include/SDOT/ConjugateFunctions/: BalancedConjugate.h  ConjugateFunction.h
include/SDOT/Distances/: Distances.h  GHKFunctions.h  LineQuadrature.h  QuadraticRegularization.h  QuadraticRegularizationFunctions.h  QuadratureDistance.h  RectangularQuadrature.h  TriangularQuadrature.h  Wasserstein2.h
include/SDOT/Integrands/: ConstantIntegrand.h  Integrand.h  TransportIntegrand.h
src/: BoundingBox.cpp  DiscretizedDistribution.cpp  LaguerreDiagram.cpp  OptionUtilities.cpp  Polygon.cpp  PolygonRasterize.cpp  PythonBindings.cpp  RegularGrid.cpp  SemiDiscreteOT.cpp
src/ConjugateFunctions/: BalancedConjugate.cpp
src/Distances/: GHKFunctions.cpp  GenerateGaussLegendre.py  GenerateSmolyak.py  LineQuadrature.cpp  QuadraticRegularization.cpp  QuadraticRegularizationFunctions.cpp  QuadratureDistance.cpp  RectangularQuadrature.cpp  TriangularQuadrature.cpp  Wasserstein2.cpp
src/Integrands/: ConstantIntegrand.cpp  TransportIntegrand.cpp
src/python/pysdot/: PlottingTools.py  __init__.py
tests/: CircleProblem.cpp  ComputeSDOT.cpp  ConstructLaguerre.cpp  Convexify.cpp
tests/unit/: ConjugateTests.cpp  DistanceTests.cpp  IntegrandTests.cpp  LaguerreDiagramTests.cpp  QuadratureTests.cpp  SemiDiscreteOTTests.cpp
